@@ -517,7 +517,9 @@ accordingly, proceeding as follows:
 <	Skipped if ":syntax off" was called or if the "-u NONE" command
 	line argument was given.
 
-10. Load the plugin scripts.					*load-plugins*
+10. Set the |v:vim_did_init| variable to 1.
+
+11. Load the plugin scripts.					*load-plugins*
 	This does the same as the command: >
 		:runtime! plugin/**/*.{vim,lua}
 <	The result is that all directories in 'runtimepath' will be searched
@@ -547,21 +549,21 @@ accordingly, proceeding as follows:
 	if packages have been found, but that should not add a directory
 	ending in "after".
 
-11. Set 'shellpipe' and 'shellredir'
+12. Set 'shellpipe' and 'shellredir'
 	The 'shellpipe' and 'shellredir' options are set according to the
 	value of the 'shell' option, unless they have been set before.
 	This means that Nvim will figure out the values of 'shellpipe' and
 	'shellredir' for you, unless you have set them yourself.
 
-12. Set 'updatecount' to zero, if "-n" command argument used.
+13. Set 'updatecount' to zero, if "-n" command argument used.
 
-13. Set binary options if the |-b| flag was given.
+14. Set binary options if the |-b| flag was given.
 
-14. Read the |shada-file|.
+15. Read the |shada-file|.
 
-15. Read the quickfix file if the |-q| flag was given, or exit on failure.
+16. Read the quickfix file if the |-q| flag was given, or exit on failure.
 
-16. Open all windows
+17. Open all windows
 	When the |-o| flag was given, windows will be opened (but not
 	displayed yet).
 	When the |-p| flag was given, tab pages will be created (but not
@@ -571,7 +573,7 @@ accordingly, proceeding as follows:
 	Buffers for all windows will be loaded, without triggering |BufAdd|
 	autocommands.
 
-17. Execute startup commands
+18. Execute startup commands
 	If a |-t| flag was given, the tag is jumped to.
 	Commands given with |-c| and |+cmd| are executed.
 	The starting flag is reset, has("vim_starting") will now return zero.
